--- a/index.html
+++ b/index.html
@@ -2,8 +2,45 @@
 <html>
   <head>
     <title>BRF Slånbäret</title>
+    <style>
+      html, body {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+      }
+      body {
+        font-family: sans-serif;
+        background-image: url('./slanbaret.jpg');
+        background-attachment: local;
+        background-position: center center;
+      }
+      div#wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+      }
+      div#textbox {
+        background-color: rgba(0,0,0,.5);
+        color: white;
+        padding: 40px;
+      }
+      a {
+        color: white
+      }
+      h1 {
+        margin: 0 0 10px 0;
+      }
+    </style>
   </head>
   <body>
-    BRF Slånbäret
+    <div id="wrapper">
+      <div id="textbox">
+        <h1>BRF Slånbäret</h1>
+        <a href="mailto:styrelsen@slanbaret.nu">styrelse@slanbaret.nu</a>
+      </div>
+    </div>
   </body>
 </html>
