--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>bastard creative</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
   </head>
   <style>
     /**
